# open-lychee-api

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: game_item.rs  index.rs  indexedsearch.rs  linearsearch.rs  mod.rs  search.rs
