[package]
name = "open-lychee-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.35"
futures = "0.3.30"
http = "1.1.0"
mongodb = "2.8.1"
regex = "1.10.3"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
tower-http = {version= "0.5", features = ["cors"]}