[package]
name = "open-lychee-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
chrono = "0.4.38"
futures = "0.3.31"
http = "1.1.0"
mongodb = "2.8.2"
regex = "1.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
tower-http = {version= "0.6.1", features = ["cors"]}