[package]
name = "open-lychee-api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
chrono = "0.4.42"
futures = "0.3.31"
http = "1.3.1"
mongodb = "2.8.2"
regex = "1.11.2"
serde = "1.0.224"   
serde_json = "1.0.145"
tokio = "1.47.1"
tower-http = {version= "0.6.6", features = ["cors"]}